Changed version info to version controller and made it a separate class. All version and revision changes are handled from within the class.

--- a/Source/Panama.Database/Panama.Database.csproj
+++ b/Source/Panama.Database/Panama.Database.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Database\Tables\AlertTable.cs">
       <SubType>foo</SubType>
     </Compile>
+    <Compile Include="Database\Tables\TitleVersionController.cs" />
     <Compile Include="Database\Tables\TitleVersionTableStats.cs" />
     <Compile Include="Database\Tables\ConfigTable.cs">
       <SubType>foo</SubType>
