--- a/Source/Panama/packages.config
+++ b/Source/Panama/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net452" />
-  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net452" />
   <package id="MimeKitLite" version="2.0.6" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="Restless.Tools.Controls" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.Database" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.Library.OfficeAutomation" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.OpenXml" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.Utility" version="1.3.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net452" />
 </packages>
