Use MVVM base classes from library. Rename WorkspaceViewMode to ApplicationViewModel.

--- a/Source/Panama/packages.config
+++ b/Source/Panama/packages.config
@@ -5,6 +5,7 @@
   <package id="Restless.Tools.Controls" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Database" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Library.OfficeAutomation" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.Mvvm" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.OpenXml" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Utility" version="1.3.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net452" />
