--- a/Source/Panama/Panama.csproj
+++ b/Source/Panama/Panama.csproj
@@ -43,6 +43,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Release\</OutputPath>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\Panama.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -76,7 +77,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>DOCX</DefineConstants>
-    <DocumentationFile>bin\x86\Release\Panama.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\Panama.XML</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
@@ -102,6 +103,9 @@
     </Reference>
     <Reference Include="Restless.Tools.Library.OfficeAutomation, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Restless.Tools.Library.OfficeAutomation.1.3.0\lib\net452\Restless.Tools.Library.OfficeAutomation.dll</HintPath>
+    </Reference>
+    <Reference Include="Restless.Tools.Mvvm, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Restless.Tools.Mvvm.1.3.0\lib\net452\Restless.Tools.Mvvm.dll</HintPath>
     </Reference>
     <Reference Include="Restless.Tools.OpenXml, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Restless.Tools.OpenXml.1.3.0\lib\net452\Restless.Tools.OpenXml.dll</HintPath>
@@ -189,7 +193,6 @@
     <Compile Include="Converters\StringToCleanStringOptions.cs" />
     <Compile Include="Converters\SubtractionConverter.cs" />
     <Compile Include="Other\ApplicationInfo.cs" />
-    <Compile Include="Other\BindableBase.cs" />
     <Compile Include="Other\GeneralOption.cs" />
     <Compile Include="Other\MimeKitMessage.cs" />
     <Compile Include="Other\PreviewMode.cs" />
@@ -200,8 +203,6 @@
     <Compile Include="Other\MessageSelectMode.cs" />
     <Compile Include="Other\FixedWidth.cs" />
     <Compile Include="Other\MessageSelectOptions.cs" />
-    <Compile Include="Other\RelayCommand.cs" />
-    <Compile Include="Other\CommandSupported.cs" />
     <Compile Include="Other\TitleVersionRenameItemCollection.cs" />
     <Compile Include="Other\WindowFactory.cs" />
     <Compile Include="Startup\StartupOptions.cs" />
@@ -235,7 +236,6 @@
     <Compile Include="ViewModel\Controllers\ToolTitleVersionController.cs" />
     <Compile Include="Controls\TabControl\TabControlExtended.cs" />
     <Compile Include="Collections\MenuItemCollection.cs" />
-    <Compile Include="Collections\CommandDictionary.cs" />
     <Compile Include="Converters\DatesToDayDiffConverter.cs" />
     <Compile Include="Converters\ValueToBooleanConverter.cs" />
     <Compile Include="Converters\IntegerToVisibilityConverter.cs" />
@@ -267,13 +267,13 @@
     <Compile Include="ViewModel\Controllers\TitleVersionController.cs" />
     <Compile Include="ViewModel\Controllers\ToolControllerBase.cs" />
     <Compile Include="ViewModel\CredentialViewModel.cs" />
-    <Compile Include="ViewModel\DataGridPreviewViewModel.cs" />
+    <Compile Include="ViewModel\Abstract\DataGridPreviewViewModel.cs" />
     <Compile Include="ViewModel\StatisticsViewModel.cs" />
     <Compile Include="ViewModel\ToolConvertViewModel.cs" />
     <Compile Include="ViewModel\ToolMessageSyncViewModel.cs" />
     <Compile Include="ViewModel\ToolScrambleViewModel.cs" />
     <Compile Include="ViewModel\ToolTitleListViewModel.cs" />
-    <Compile Include="ViewModel\DataGridViewModelBase.cs" />
+    <Compile Include="ViewModel\Abstract\DataGridViewModelBase.cs" />
     <Compile Include="ViewModel\ToolSearchViewModel.cs" />
     <Compile Include="ViewModel\ToolOrphanViewModel.cs" />
     <Compile Include="ViewModel\ToolExportViewModel.cs" />
@@ -758,13 +758,12 @@
     <Compile Include="Other\AppTaskId.cs" />
     <Compile Include="Converters\DoubleToGridLengthConverter.cs" />
     <Compile Include="ViewModel\VisualCommandViewModel.cs" />
-    <Compile Include="ViewModel\DataGridViewModel.cs" />
+    <Compile Include="ViewModel\Abstract\DataGridViewModel.cs" />
     <Compile Include="ViewModel\PublisherViewModel.cs" />
     <Compile Include="ViewModel\ConfigViewModel.cs" />
     <Compile Include="ViewModel\TitleViewModel.cs" />
     <Compile Include="ViewModel\Windows\MainWindowViewModel.cs" />
-    <Compile Include="ViewModel\ViewModelBase.cs" />
-    <Compile Include="ViewModel\WorkspaceViewModel.cs" />
+    <Compile Include="ViewModel\Abstract\ApplicationViewModel.cs" />
     <Compile Include="View\PublisherView.xaml.cs">
       <DependentUpon>PublisherView.xaml</DependentUpon>
     </Compile>
