--- a/Source/Panama/Panama.csproj
+++ b/Source/Panama/Panama.csproj
@@ -86,6 +86,10 @@
     <Reference Include="DocumentFormat.OpenXml, Version=2.8.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
       <HintPath>..\packages\DocumentFormat.OpenXml.2.8.1\lib\net40\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAPICodePack-Core.1.1.1\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
@@ -101,11 +105,11 @@
     <Reference Include="Restless.Tools.Database, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Restless.Tools.Database.1.3.0\lib\net452\Restless.Tools.Database.dll</HintPath>
     </Reference>
-    <Reference Include="Restless.Tools.Library.OfficeAutomation, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.Library.OfficeAutomation.1.3.0\lib\net452\Restless.Tools.Library.OfficeAutomation.dll</HintPath>
-    </Reference>
     <Reference Include="Restless.Tools.Mvvm, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Restless.Tools.Mvvm.1.3.0\lib\net452\Restless.Tools.Mvvm.dll</HintPath>
+    </Reference>
+    <Reference Include="Restless.Tools.OfficeAutomation, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Restless.Tools.OfficeAutomation.1.3.0\lib\net452\Restless.Tools.OfficeAutomation.dll</HintPath>
     </Reference>
     <Reference Include="Restless.Tools.OpenXml, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Restless.Tools.OpenXml.1.3.0\lib\net452\Restless.Tools.OpenXml.dll</HintPath>
