--- a/Source/Panama/packages.config
+++ b/Source/Panama/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net452" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net452" />
   <package id="MimeKitLite" version="2.0.6" targetFramework="net452" />
   <package id="Restless.Tools.Controls" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Database" version="1.3.0" targetFramework="net452" />
-  <package id="Restless.Tools.Library.OfficeAutomation" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Mvvm" version="1.3.0" targetFramework="net452" />
+  <package id="Restless.Tools.OfficeAutomation" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.OpenXml" version="1.3.0" targetFramework="net452" />
   <package id="Restless.Tools.Utility" version="1.3.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net452" />
