--- a/src/Panama/Panama.csproj
+++ b/src/Panama/Panama.csproj
@@ -83,46 +83,9 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DocumentFormat.OpenXml, Version=2.10.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
-      <HintPath>..\packages\DocumentFormat.OpenXml.2.10.0\lib\net40\DocumentFormat.OpenXml.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAPICodePack-Shell.1.1.1\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
-    </Reference>
-    <Reference Include="MimeKitLite, Version=2.5.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814, processorArchitecture=MSIL">
-      <HintPath>..\packages\MimeKitLite.2.5.0\lib\net45\MimeKitLite.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.Controls, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.Controls.1.3.2\lib\net45\Restless.Tools.Controls.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.Database, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.Database.1.3.3\lib\net45\Restless.Tools.Database.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.Mvvm, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.Mvvm.1.3.2\lib\net45\Restless.Tools.Mvvm.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.OfficeAutomation, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.OfficeAutomation.1.3.1\lib\net45\Restless.Tools.OfficeAutomation.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.OpenXml, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.OpenXml.1.3.3\lib\net45\Restless.Tools.OpenXml.dll</HintPath>
-    </Reference>
-    <Reference Include="Restless.Tools.Utility, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Restless.Tools.Utility.1.3.2\lib\net45\Restless.Tools.Utility.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite, Version=1.0.112.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Data.SQLite.Core.1.0.112.0\lib\net451\System.Data.SQLite.dll</HintPath>
-    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
@@ -900,7 +863,6 @@
     <Resource Include="Resources\Images\Image.Reference.48.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="ProjectNotes.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -997,7 +959,32 @@
       <Name>Panama.Database</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="MimeKitLite">
+      <Version>2.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.Controls">
+      <Version>1.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.Database">
+      <Version>1.3.3</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.Mvvm">
+      <Version>1.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.OfficeAutomation">
+      <Version>1.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.OpenXml">
+      <Version>1.3.3</Version>
+    </PackageReference>
+    <PackageReference Include="Restless.Tools.Utility">
+      <Version>1.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite.Core">
+      <Version>1.0.112</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
@@ -1007,13 +994,6 @@
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
-  <Import Project="..\packages\System.Data.SQLite.Core.1.0.112.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.112.0\build\net451\System.Data.SQLite.Core.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\System.Data.SQLite.Core.1.0.112.0\build\net451\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Data.SQLite.Core.1.0.112.0\build\net451\System.Data.SQLite.Core.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
