Database (main update)

--- a/src/Panama.Database/Panama.Database.csproj
+++ b/src/Panama.Database/Panama.Database.csproj
@@ -1,268 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{587B3ABC-DE8B-45E6-9255-0921D6D4CF8D}</ProjectGuid>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Restless.App.Panama.Database</RootNamespace>
+    <PackageId>Panama.Database</PackageId>
     <AssemblyName>Panama.Database</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <RootNamespace>Restless.Panama.Database</RootNamespace>
+    <Description>Provides database operations specific to the Panama application.</Description>
+    <PackageProjectUrl>https://github.com/victor-david/panama</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/victor-david/panama</RepositoryUrl>
+    <Authors>Restless Animal Development</Authors>
+    <Company>Restless Animal Development</Company>
+    <Version>2.5.0</Version>
+    <Product>Panama Database</Product>
+    <Title>Panama Database</Title>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <Copyright>Copyright © 2022</Copyright>
+    <PackageTags>database</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;ANYCPU</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;ANYCPU</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Release\Panama.Database.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\x86\Release\Panama.Database.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x64\Release\Panama.Database.XML</DocumentationFile>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
+    <PackageReference Include="Restless.Toolkit.Core" Version="2.5.4" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Database\IColumnRowImporter.cs" />
-    <Compile Include="Database\DatabaseImporter.cs" />
-    <Compile Include="Database\Tables\ColorTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\DummyTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SelfPublishedTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SelfPublisherTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\PublisherTableStats.cs" />
-    <Compile Include="Database\Tables\SubmissionBatchTableStats.cs" />
-    <Compile Include="Database\Tables\AlertTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TitleVersionController.cs" />
-    <Compile Include="Database\Tables\TitleVersionTableStats.cs" />
-    <Compile Include="Database\Tables\ConfigTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\AuthorTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionPeriodTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TableTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\DocumentTypeTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionMessageAttachmentTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionMessageTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\UserNoteTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TitleVersionTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionDocumentTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\ResponseTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\PublishedTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionBatchTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\SubmissionTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\LinkTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\LanguageTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\CredentialTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TitleTagTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TagTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\PublisherTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\DatabaseController.cs" />
-    <Compile Include="Database\Tables\SchemaTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Database\Tables\TitleTable.cs">
-      <SubType>foo</SubType>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Create.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Create.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Resources\Data.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Data.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Schema\author.ddl.sql" />
-    <Content Include="Schema\author.import.sql" />
-    <Content Include="Schema\color.ddl.sql" />
-    <Content Include="Schema\config.ddl.sql" />
-    <Content Include="Schema\documenttype.import.sql" />
-    <Content Include="Schema\documenttype.ddl.sql" />
-    <Content Include="Schema\credential.ddl.sql" />
-    <Content Include="Schema\language.ddl.sql" />
-    <Content Include="Schema\language.import.sql" />
-    <Content Include="Schema\link.ddl.sql" />
-    <Content Include="Schema\selfpublished.ddl.sql" />
-    <Content Include="Schema\published.ddl.sql" />
-    <Content Include="Schema\selfpublisher.ddl.sql" />
-    <Content Include="Schema\publisher.ddl.sql" />
-    <Content Include="Schema\response.ddl.sql" />
-    <Content Include="Schema\response.import.sql" />
-    <Content Include="Schema\schema.ddl.sql" />
-    <Content Include="Schema\schema.import.sql" />
-    <Content Include="Schema\submission.ddl.sql" />
-    <Content Include="Schema\submissionbatch.ddl.sql" />
-    <Content Include="Schema\submissiondocument.ddl.sql" />
-    <Content Include="Schema\submissionmessage.ddl.sql" />
-    <Content Include="Schema\submissionmessageattachment.ddl.sql" />
-    <Content Include="Schema\submissionperiod.ddl.sql" />
-    <Content Include="Schema\tag.ddl.sql" />
-    <Content Include="Schema\alert.ddl.sql" />
-    <Content Include="Schema\title.ddl.sql" />
-    <Content Include="Schema\titletag.ddl.sql" />
-    <Content Include="Schema\titleversion.ddl.sql" />
-    <Content Include="Schema\usernote.ddl.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Create.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Create.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\Data.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Data.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Restless.Tools.Database">
-      <Version>1.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="Restless.Tools.OpenXml">
-      <Version>1.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="Restless.Tools.Utility">
-      <Version>1.3.2</Version>
-    </PackageReference>
-    <PackageReference Include="System.Data.SQLite.Core">
-      <Version>1.0.112</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
