--- a/src/Panama/Panama.csproj
+++ b/src/Panama/Panama.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Panama.Controls\Panama.Controls.csproj" />
     <ProjectReference Include="..\Panama.Database\Panama.Database.csproj" />
     <ProjectReference Include="..\Panama.Utility\Panama.Utility.csproj" />
   </ItemGroup>
@@ -33,21 +34,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
-    <Compile Update="View\EditControls\TitleEdit5.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="View\EditControls\TitleEdit4.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="View\EditControls\TitleEdit3.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="View\EditControls\TitleEdit2.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="View\EditControls\TitleEdit1.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -55,29 +41,6 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Update="View\EditControls\TitleEdit5.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\TitleEdit4.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\TitleEdit3.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\TitleEdit2.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\TitleEdit1.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
 
 </Project>
