--- a/src/Panama/Panama.csproj
+++ b/src/Panama/Panama.csproj
@@ -13,6 +13,7 @@
     <RepositoryUrl>https://github.com/victor-david/panama</RepositoryUrl>    
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Version>4.0.0</Version>
+    <ApplicationIcon>App.Main.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,21 +42,6 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Update="View\EditControls\PublisherEditPeriod.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\PublisherEditSubmission.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="View\EditControls\PublisherEditCredential.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
 
 </Project>
