Scanner tool overhaul to async (in progress)

--- a/src/Panama.Database/Panama.Database.csproj
+++ b/src/Panama.Database/Panama.Database.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Restless.Toolkit.Core" Version="2.5.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Rows\SubmissionDocumentRow.cs" />
+  </ItemGroup>
+
 </Project>
