--- a/src/Panama.Database/Panama.Database.csproj
+++ b/src/Panama.Database/Panama.Database.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <PackageId>Panama.Database</PackageId>
     <AssemblyName>Panama.Database</AssemblyName>
@@ -22,10 +22,6 @@
 
   <ItemGroup>
     <PackageReference Include="Restless.Toolkit.Core" Version="2.5.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Rows\SubmissionDocumentRow.cs" />
   </ItemGroup>
 
 </Project>
