--- a/src/Panama/Panama.csproj
+++ b/src/Panama/Panama.csproj
@@ -7,6 +7,7 @@
     <Description>Provides overall tracking services for titles (date written, updated, multiple version support, search, analysis), publications, submissions, associated submission documents and submission email messages.</Description>
     <Company>Restless Animal Development</Company>
     <Product>Panama</Product>
+    <AssemblyTitle>Panama ∑en</AssemblyTitle>
     <Copyright>2022 Restless Animal Development</Copyright>
     <RootNamespace>Restless.Panama</RootNamespace>
     <PackageProjectUrl>https://github.com/victor-david/panama</PackageProjectUrl>
