--- a/src/Panama.Controls/Panama.Controls.csproj
+++ b/src/Panama.Controls/Panama.Controls.csproj
@@ -1,22 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
-    <UseWpf>true</UseWpf>
-    <OutputType>Library</OutputType>
-    <PackageId>Panama.Controls</PackageId>
     <AssemblyName>Panama.Controls</AssemblyName>
-    <RootNamespace>Restless.Panama.Controls</RootNamespace>
-    <Description>Provides custom controls for the Panama application.</Description>
-    <PackageProjectUrl>https://github.com/victor-david/panama</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/victor-david/panama</RepositoryUrl>
     <Authors>Restless Animal Development</Authors>
     <Company>Restless Animal Development</Company>
-    <Version>1.0.0</Version>
-    <Product>Panama Controls</Product>
-    <Title>Panama Controls</Title>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Copyright>Copyright © 2022</Copyright>
-    <PackageTags>wpf controls wpf-controls</PackageTags>
+    <Description>Provides custom controls for the Panama application.</Description>
+    <OutputType>Library</OutputType>
+    <PackageId>Panama.Controls</PackageId>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/victor-david/panama</PackageProjectUrl>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageTags>wpf controls wpf-controls</PackageTags>
+    <Product>Panama Controls</Product>
+    <RepositoryUrl>https://github.com/victor-david/panama</RepositoryUrl>
+    <RootNamespace>Restless.Panama.Controls</RootNamespace>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
+    <Title>Panama Controls</Title>
+    <UseWpf>true</UseWpf>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 </Project>
