--- a/src/Panama/Panama.csproj
+++ b/src/Panama/Panama.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="5.1.0" />
     <PackageReference Include="MimeKitLite" Version="4.7.1" />
     <PackageReference Include="Restless.Toolkit" Version="2.5.24" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
